docs: Improve tasks-whatis sample